fix responsive issue on tablet

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -77,7 +77,7 @@
 }
 
 /*  mobile media query*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
   .item:nth-child(2) {
     display: none;
   }
